# bencheetah

./: .gitattributes  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: demo.py
notebooks/: tutorial.ipynb
src/bencheetah/: __init__.py  core.py  formatters.py  plotter.py
tests/: test_bencheetah.py
